# pycoder

./: .gitignore  Makefile  mypy.ini  pyproject.toml
pycoder/: code.py  judge.py
src/pycoder/: auth.py  code.py  judge.py  langs.py  loader.py  main.py  scrape.py
src/pycoder/tests/scrape/: test_scrape.py
src/utils/: pycolor.py
tests/: conftest.py  test_pycoder.py
tests/auth/: test_auth.py
tests/auth/source/: csrf.html
