[tool.poetry]
name = "pycoder"
version = "0.1.0"
description = ""
authors = ["m2tkl"]

[tool.poetry.dependencies]
python = "^3.9"
fire = "^0.4.0"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
html5lib = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
mypy = "^0.812"
autopep8 = "^1.5.5"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pc = 'pycoder.main:main'
