[project]
name = "pycoder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "m2tkl", email = "kenchalros@gmail.com" }
]
dependencies = [
    "fire>=0.5.0",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "html5lib>=1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.2",
    "flake8>=5.0.4",
    "mypy>=1.6.1",
    "pytest-cov>=4.1.0",
    "autopep8>=2.0.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
pc = 'pycoder.main:main'
